--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
         }
 
         .line {
-            margin-bottom: 6rem;
+            break-inside: avoid;
         }
 
         .top, .base, .bottom {
-            height: 2rem;
             width: 100%;
             border-top: 1px solid #ddd;
         }
@@ -59,7 +58,6 @@
             .no-print {
                 display: none;
             }
-           .page-break { page-break-after: always; } /* page-break-after works, as well */
         }
 
         </style>
