--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 
         .top, .base, .bottom {
             width: 100%;
-            border-top: 1px solid #ddd;
         }
 
-        .top, .base {
+        .top {
             border-top: 1px solid #ddd;
+            border-bottom: 1px solid #ddd;
         }
 
         .base {
