--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="sv">
     <head>
         <meta charset="UTF-8">
         <title>Skriva &amp; glass!</title>
@@ -40,8 +40,11 @@
             width: 100%;
         }
 
-        .top {
-            border-top: 1px solid #ddd;
+        .with-tertiary-lines .top {
+            border-top: 1px dashed #ddd;
+        }
+
+        .with-secondary-line .top {
             border-bottom: 1px solid #ddd;
         }
 
@@ -49,8 +52,8 @@
             border-bottom: 1px solid black;
         }
 
-        .bottom {
-            border-bottom: 1px solid #ddd;
+        .with-tertiary-lines .bottom {
+            border-bottom: 1px dashed #ddd;
         }
 
 
